fix: jumping sound and buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,10 @@ body {
 #start-game {
   background-image: url("./../img/cover.png");
   display: block;
-/*   display: flex;
-  justify-content: space-around;
-  align-items: flex-end; */
   text-align: center;
 }
 
 #canvas {
-/*   background-image: url("./../img/cover3.png"); */
   border-radius: 5px;
   display: none;
 }
@@ -65,17 +61,13 @@ button {
   border: 0;
   box-shadow: 0;
   border-radius: 5px;
-  margin: 600px 20px 20px 20px;
+  margin-right: 20px;
   box-shadow: 5px 5px 10px rgb(39, 39, 39);
 }
 
 #buttons {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  text-align: center;
-  width: 350px;
+  position: absolute;
+  margin: 600px 40px 30px 55px; 
 }
 
 button:hover {
